--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ujjal Kumar Roy",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
