--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Ujjal Kumar Roy",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.1",
     "nodemon": "^2.0.20"
